# gctoolscmd

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  shell_integration.md  vcpkg.json
.github/workflows/: build.yml
src/: main.cpp
